# draft2Dengine

./: README.md
draft/: CMakeLists.txt  globals.h  image.cpp  image.h  main.cpp  vec2.cpp  vec2.h
draft/component/: component.cpp  component.h  component_container.cpp  component_container.h
draft/component/all_components/: draw.cpp  draw.h  script.cpp  script.h  transform.cpp  transform.h
draft/io/: input.cpp  input.h  output.cpp  output.h
draft/levels/: level.cpp  level.h  level1.cpp  level1.h
draft/objects/: dog.cpp  dog.h  komet.cpp  komet.h  object.cpp  object.h  player.cpp  player.h
